--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- displays site properly based on user's device -->
+    <meta
+      name="dscription"
+      content="Frontend Mentor Notifications Page Challenge completed by William M. Tsikata"
+    />
 
     <link rel="stylesheet" href="./assets/css/style.css" />
     <link
@@ -152,7 +156,9 @@
         Challenge by
         <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
           >Frontend Mentor</a
-        >. Coded by <a href="#">Your Name Here</a>.
+        >. Coded by
+        <a href="twitter.com/dev_willman" target="_blank">William M. Tsikata</a
+        >.
       </div>
     </div>
 
