fix frontend mentor errors

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
           <button class="mark-read">Mark all as read</button>
         </div>
 
-        <div class="body">
+        <div class="content">
           <div class="notification-card unread">
             <div class="user-dp">
               <img
@@ -159,14 +159,14 @@
         </div>
       </div>
 
-      <div class="attribution">
+      <footer class="attribution">
         Challenge by
         <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
           >Frontend Mentor</a
         >. Coded by
         <a href="twitter.com/dev_willman" target="_blank">William M. Tsikata</a
         >.
-      </div>
+      </footer>
     </div>
 
     <script src="./assets/js/script.js"></script>
