fix frontend mentor errors

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <div class="container">
       <div class="notifications-container">
         <div class="head">
-          <div>
+          <div role="heading">
             <h1>Notifications</h1>
             <span class="notification-count"> 3</span>
           </div>
@@ -31,7 +31,7 @@
           <button class="mark-read">Mark all as read</button>
         </div>
 
-        <div class="content">
+        <section class="content">
           <div class="notification-card unread">
             <div class="user-dp">
               <img
@@ -156,7 +156,7 @@
               <small class="time">2 weeks ago</small>
             </div>
           </div>
-        </div>
+        </section>
       </div>
 
       <footer class="attribution">
