fix frontend mentor errors

--- a/index.html
+++ b/index.html
@@ -22,16 +22,16 @@
   <body>
     <div class="container">
       <div class="notifications-container">
-        <div class="head">
+        <header class="head">
           <div role="heading">
             <h1>Notifications</h1>
             <span class="notification-count"> 3</span>
           </div>
 
           <button class="mark-read">Mark all as read</button>
-        </div>
+        </header>
 
-        <section class="content">
+        <section class="content" role="contentinfo">
           <div class="notification-card unread">
             <div class="user-dp">
               <img
