fix frontend mentor errors

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
           <button class="mark-read">Mark all as read</button>
         </header>
 
-        <section class="content" role="contentinfo">
+        <main class="content" role="mainS">
           <div class="notification-card unread">
             <div class="user-dp">
               <img
@@ -156,10 +156,10 @@
               <small class="time">2 weeks ago</small>
             </div>
           </div>
-        </section>
+        </main>
       </div>
 
-      <footer class="attribution">
+      <footer class="attribution" role="contentinfo">
         Challenge by
         <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
           >Frontend Mentor</a
