fix frontend mentor errors

--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
   <body>
     <div class="container">
       <div class="notifications-container">
-        <header class="head">
-          <div role="heading">
+        <header class="head" role="heading">
+          <div>
             <h1>Notifications</h1>
             <span class="notification-count"> 3</span>
           </div>
@@ -31,7 +31,7 @@
           <button class="mark-read">Mark all as read</button>
         </header>
 
-        <main class="content" role="mainS">
+        <main class="content" role="main">
           <div class="notification-card unread">
             <div class="user-dp">
               <img
